--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,7 @@
-name: Java CI with Maven
+name: CI-CD
 on:
   push:
     branches: [ "master" , "develop"]
-  pull_request:
-    branches: [ "master" , " develop"]
 
 jobs:
   build:
@@ -12,35 +10,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name : upload file
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.SSH_IP }}
-        username: ${{ secrets.SSH_ID }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        source: "target/*.jar"
-        target: "~/"
-        rm: false
-
-    - name: execute shell script
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_IP }}
-        username: ${{ secrets.SSH_ID }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        script_stop: true
-        script: "./startup.sh"
-        
-    - name : Run SonarQube
-      run : mvn sonar:sonar -Dsonar.projectKey=github-action -Dsonar.host.url=${{secrets.SONAR_HOST}} -Dsonar.login=${{secrets.SONAR_TOKEN}}
+    - name: Prepare secure key manager certKey file
+      run: |  
+        echo ${{ secrets.SECURE_KEY_MANAGER_CERT_KEY }} > t3team-skm-cert.txt
+        mkdir src/main/resources/key
+        base64 -d t3team-skm-cert.txt > src/main/resources/key/t3team-skm-cert.p12
