modify: #10 테스트를 위해 조건에 `feature/ci-cd` 브랜치 추가

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 name: CI-CD
 on:
   push:
-    branches: [ "master" , "develop"]
+    branches: [ "master" , "develop", "feature/ci-cd" ]
 
 jobs:
   build:
