--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,3 +15,13 @@ jobs:
         echo ${{ secrets.SECURE_KEY_MANAGER_CERT_KEY }} > t3team-skm-cert.txt
         mkdir src/main/resources/key
         base64 -d t3team-skm-cert.txt > src/main/resources/key/t3team-skm-cert.p12
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+        
+    - name: Build with Maven
+      run: mvn package ${{ secrets.MAVEN_PACKAGE_OPTIONS }}
