--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,11 +1,10 @@
 name: CI-CD
 on:
   push:
-    branches: [ "master" , "develop", "feature/ci-cd" ]
+    branches: [ "master" , "develop" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     
     steps:
@@ -26,7 +25,7 @@ jobs:
     - name: Build with Maven
       run: mvn package ${{ secrets.MAVEN_PACKAGE_OPTIONS }}
 
-    - name : upload file
+    - name : delivery
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.SSH_IP }}
@@ -37,7 +36,7 @@ jobs:
         target: "~/"
         rm: false
 
-    - name: execute shell script
+    - name: deploy
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_IP }}
