--- a/src/main/resources/application_prod.yml
+++ b/src/main/resources/application_prod.yml
@@ -1,4 +1,6 @@
-eureka:
+ eureka:
   client:
+    register-with-eureka: true
+    fetch-registry: true
     service-url:
       defaultZone: ${eurekaServiceUrlDefaultZone}
